--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,20 @@ body {
 h2 {
     font-size: 30px;
     line-height: 42px;
+    padding: 0;
+    margin: 0;
 }
 
 h3 {
     font-size: 24px;
     line-height: 30px;
+    padding: 0;
+    margin: 0;
+}
+
+p{
+    padding: 0;
+    margin: 0;
 }
 
 .main-header {
@@ -50,7 +59,7 @@ h3 {
 }
 
 main {
-        background-color: azure;
+        background-color: burlywood;
 }
 
 .title {
@@ -71,6 +80,12 @@ main {
     width: 700px;
     margin-bottom: 45px;
     
+}
+
+.content-bottom {
+
+    padding: 16px;
+   
 }
 
 .pagination {
@@ -109,9 +124,8 @@ main {
 }
 
 .index-logo,.nav-item {
-        display: inline-block;
-    font-size: 14px;
-    
+    display: inline-block;
+    font-size: 14px;  
 }
 
 .breadcrumbs {
@@ -122,10 +136,12 @@ main {
     
     display: inline-block;
     font-size: 14px;
+     
     
 }
 
 .catalog_item {
+    background-color: aqua;
     display: inline-block;
     width: 220px;
     min-height: 290px;
@@ -153,12 +169,16 @@ main {
 }
 
 .index-logo {
+    float: left;
     width: 110px;
     height: 25px;
 }
 
+.nav-right{
+     float: left;
+}
+
 .picture {
-   
     background-color: teal;
     float: left;
     width: 460px;
@@ -183,4 +203,10 @@ main {
     margin-left: -40px;
     display: inline-block;
     font-size: 14px;
+}
+
+.filter_list {
+    padding: 0;
+    margin: 0;
+    list-style: none ;
 }
